# dpo-wan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: ablation.yaml  main.yaml  scale.json
paper/: compile.sh  paper.tex
paper/tables/: ablation.tex  diagnostics.tex  main.tex  scale.tex  scale_5s.tex  val_dpo.tex
scripts/: 00_setup_videoalign.sh  01_prepare_prompts.py  02_generate_and_score.py  03_build_preferences.py  04_train_dpo.py  05_eval.py  06_run_ablation.py  07_render_paper.py  08_eval_ablation.py  99_smoke.py  bench_gen_81f.py  build_filtered_prefs.py  checkpoint_reward_eval.py  eval_dpo_metrics.py  plot_dpo_5s.py  render_mq_paper.py  replay_dataloader.py  run_full.sh  run_pipeline.sh  stage2_fast.sh  stage2_post_train_gen.sh  stage3_stability.sh  stage4_main_eval.sh  stage5_scaled.sh  stage6_b10_main.sh  stage7_dpo_5s.sh  train_set_rerun.py
src/dpo_wan/: __init__.py  data.py  dpo.py  eval.py  paths.py  preferences.py  rewards.py  sampling.py  training.py  utils.py
